feat: イメージ共有用UI実装完了
- UI実装完了（学生向け・企業向け分離）
- 設計書・手順書作成
- スマートコントラクト準備

※イメージ共有用のシンプルな実装です。壊してもらって大丈夫です。
次のフェーズでブロックチェーン連携を実装予定。

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "dynamodb:install": "dynamodb-local install",
+    "dynamodb:start": "dynamodb-local --port 8000",
     "create-table": "node scripts/create-table.js",
+    "create-tables": "node scripts/create-tables.js",
     "seed": "node scripts/seed-user.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +25,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "dynamodb-local": "^0.0.36",
     "nodemon": "^3.1.11"
   }
 }
