--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,8 @@ AWS_REGION=ap-northeast-1
 # For local development with DynamoDB Local (docker):
 DYNAMODB_ENDPOINT=http://localhost:8000
 DYNAMODB_TABLE_USERS=CareerPassportUsers
+DYNAMODB_TABLE_EVENTS=CareerPassportEvents
+DYNAMODB_TABLE_STAMPS=CareerPassportStamps
 
 # JWT secret (use a secure random value in production)
 JWT_SECRET=replace_with_strong_random_value
