Day 8完了: バックエンドAPI実装とフロントエンド統合、README更新
- バックエンドAPI実装完了（イベント応募、メッセージ、マッチング）
- DynamoDB Local (Docker) セットアップ
- フロントエンド統合（StudentEventApply, StudentMessages, StudentMatchedCompanies）
- イベント応募履歴表示機能追加
- メッセージ新規会話開始機能追加
- READMEにDB設計とアプリ概要を追加
- Day 9-10の内容をテストとアプリ完成度向上に更新

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "dynamodb:install": "dynamodb-local install",
-    "dynamodb:start": "dynamodb-local --port 8000",
+    "dynamodb:up": "docker compose up -d",
+    "dynamodb:down": "docker compose down",
+    "dynamodb:logs": "docker compose logs -f dynamodb",
+    "dynamodb:stop": "docker compose stop",
     "create-table": "node scripts/create-table.js",
     "create-tables": "node scripts/create-tables.js",
+    "create-api-tables": "node scripts/create-api-tables.js",
     "seed": "node scripts/seed-user.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +28,6 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "dynamodb-local": "^0.0.36",
     "nodemon": "^3.1.11"
   }
 }
