--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,14 @@
-# AWS / DynamoDB
+# DynamoDB 設定（Docker で起動した DynamoDB Local を使用）
 AWS_REGION=ap-northeast-1
-# For local development with DynamoDB Local (docker):
 DYNAMODB_ENDPOINT=http://localhost:8000
-DYNAMODB_TABLE_USERS=CareerPassportUsers
+# 注意: Docker で DynamoDB Local を使用する場合、DYNAMODB_ENDPOINT を設定します
+# AWS 認証情報は不要（DynamoDB Local は認証不要）
 
-# JWT secret (use a secure random value in production)
-JWT_SECRET=replace_with_strong_random_value
+# DynamoDB テーブル名
+DYNAMODB_TABLE_USERS=NonFungibleCareerUsers
 
-# Optional seed user
-SEED_EMAIL=org@example.com
-SEED_PASSWORD=password123
-SEED_NAME="Org Admin"
+# JWT 設定
+JWT_SECRET=your-secret-key-change-in-production
 
-# Dummy credentials for DynamoDB Local
-AWS_ACCESS_KEY_ID=LOCAL
-AWS_SECRET_ACCESS_KEY=LOCAL
+# サーバー設定
+PORT=3000
