リファクタリング: 不要なファイル削除と認証API削除
- 不要なファイルを削除:
  - backend/test-api-simple.sh (test-api.shに統合)
  - backend/pnpm-lock.yaml, frontend/pnpm-lock.yaml (package-lock.jsonを使用)
  - backend/scripts/seed-user.js (Web3アプリでは不要)

- ドキュメント統合:
  - backend/START_GUIDE.md と TEST_GUIDE.md を backend/GUIDE.md に統合

- 認証API削除（Web3アプリの設計に統一）:
  - backend/src/routes/authRoutes.js
  - backend/src/controllers/authController.js
  - backend/src/services/authService.js
  - backend/src/models/userModel.js
  - backend/src/utils/jwt.js
  - backend/src/routes/orgRoutes.js (email/password認証)
  - frontend/src/pages/Login.jsx
  - frontend/src/api/auth.js
  - frontend/src/lib/api.js の authAPI 部分

- 依存関係整理:
  - bcryptjs, jsonwebtoken を削除（未使用）
  - seed スクリプトを削除

- スクリプトにコメント追加:
  - create-table.js, create-tables.js, create-api-tables.js に用途説明を追加

認証はMetaMaskのウォレット接続のみに統一

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,6 @@
     "create-table": "node scripts/create-table.js",
     "create-tables": "node scripts/create-tables.js",
     "create-api-tables": "node scripts/create-api-tables.js",
-    "seed": "node scripts/seed-user.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,11 +20,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
-    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
