リファクタリング: 不要なファイルと重複ファイルを削除して整理
- 未使用のコンポーネントを削除: Layout.jsx (StudentLayout/OrgLayoutが使用中)
- 未使用のルートを削除: stampRoutes.js, nftRoutes.js (ブロックチェーンから直接読み込み)
- 未使用のライブラリを削除: dynamo-stamps.js (上記ルートで使用されていた)
- 古いスクリプトを削除: create-table.js, create-tables.js (create-api-tables.jsが使用中)
- 未使用のページを削除: OrgZKPVerification.jsx (ルーターで使用されていない)
- 重複スクリプトを削除: query-anvil-data.sh (query-anvil-data.jsが存在)
- 空のディレクトリを削除: api/, controllers/, models/, services/, utils/
- server.jsから未使用のルートインポートを削除
- package.jsonから未使用のスクリプトを削除

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,9 @@
     "dynamodb:down": "docker compose down",
     "dynamodb:logs": "docker compose logs -f dynamodb",
     "dynamodb:stop": "docker compose stop",
-    "create-table": "node scripts/create-table.js",
-    "create-tables": "node scripts/create-tables.js",
     "create-api-tables": "node scripts/create-api-tables.js",
+    "create-companies-table": "node scripts/create-companies-table.js",
+    "init-poc-companies": "node scripts/init-poc-companies.js",
     "view-data": "node scripts/view-data.js",
     "view-applications": "node scripts/view-applications.js",
     "view-job-conditions": "node scripts/view-job-conditions.js",
