メッセージ機能とマッチング画面の改善
- メッセージ機能の改善:
  - getConversations関数をシンプルにして重複を防ぐ
  - 送信者と受信者の両方の会話を取得できるように修正
  - メッセージ送信後の処理をシンプル化
  - リアルタイム更新間隔を3秒に短縮
  - メッセージテーブルのみをリセットするスクリプトを追加

- マッチング画面の改善:
  - ユーザー側が設定したVCのZKP条件を企業側のマッチング採用画面に表示
  - ZKP条件の取得エラーハンドリングを改善
  - satisfiedConditionsがオブジェクトの場合のレンダリングを修正

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "check-tables": "node scripts/check-tables.js",
     "check-indexes": "node scripts/check-indexes.js",
     "clean-database": "node scripts/clean-database.js",
+    "clean-messages": "node scripts/clean-messages.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage"
