--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "snarkjs": "^0.7.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
